@@ -5,6 +5,7 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -42,6 +43,7 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                .cors(cors ->cors.configurationSource(configurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
@@ -54,6 +56,7 @@ public class SecurityConfig {
                         .permitAll()
                         .requestMatchers("/api/usuario")
                         .hasAuthority("SUPERADMIN")
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session
@@ -90,9 +93,9 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource configurationSource(){
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("https://sumaqwayra.com/"));
+        config.setAllowedOrigins(Arrays.asList("https://sumaqwayra.com"));
         //config.setAllowedOrigins(List.of("http://localhost:4200/",("http://localhost:4000")));
-        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE"));
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
         config.setAllowedHeaders(List.of("Content-Type", "Authorization"));
         config.setExposedHeaders(Arrays.asList("Content-Type", "Authorization","Another-Header"));
         config.setAllowCredentials(true);
@@ -101,8 +104,5 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/**",config);
         return source;
     }
-    @Bean
-    public CorsFilter corsFilter() {
-        return new CorsFilter(configurationSource());
-    }
+
 }
